# pointer-prison

./: .clang-format  CMakeLists.txt  README.md  pp.c  pp.cpp  xlib_funcs.inc
